# axelar-light-client

./: .env.template  .gitignore  Cargo.toml  Dockerfile.feed  Dockerfile.relay  NOTICE  README.md  osmosis_deployment  tarpaulin-report.html
.cargo/: config
.github/workflows/: Basic.yml
artifacts/: checksums.txt  checksums_intermediate.txt  light_client.wasm
contracts/light-client/: Cargo.toml  README.md
contracts/light-client/src/: contract.rs  execute.rs  lib.rs  msg.rs  state.rs  types.rs
contracts/light-client/src/lightclient/: helpers.rs  mod.rs  tests.rs
contracts/light-client/testdata/: instantiate.json  instantiate_goerli.json  instantiate_mainnet.json  instantiate_sepolia.json  legacy_receipt.json  message_verification_block_roots.json  receipt_log_contractcall.json  receipt_log_operatorship.json  receipt_proof.json  tx_proof.json
contracts/light-client/testdata/verification/: batched_finality_blockroots.json  bootstrap.json  bootstrap_block_roots.json  finality_block_roots.json  finality_historical_roots.json  goerli_bootstrap.json  goerli_finality_block_roots.json  goerli_optimistic_block_roots.json  optimistic_block_roots.json  optimistic_historical_roots.json  overflow_gindex.json
crates/light-client/src/: lib.rs
crates/light-client/testdata/: topic_inclusion.json
crates/light-client/testdata/verification/: 7061551-7061553.json
eth/: Cargo.toml  README.md
eth/abi/: gateway.json
eth/src/: consensus.rs  error.rs  execution.rs  gateway.rs  lib.rs  main.rs  types.rs  utils.rs
feeder/: Cargo.toml
feeder/src/: error.rs  main.rs  types.rs
feeder/src/eth/: consensus.rs  execution.rs  gateway.rs  mod.rs  state_prover.rs  utils.rs
feeder/src/prover/: consensus.rs  execution.rs  mocks.rs  mod.rs  proof.rs  test.rs  types.rs  utils.rs
feeder/src/prover/mocks/: mock_consensus_rpc.rs  mock_execution_rpc.rs  mock_state_prover.rs  mod.rs
feeder/src/prover/testdata/: logs
feeder/src/wasm/: mod.rs
light-client/: Cargo.toml
light-client/src/: contract.rs  error.rs  msg.rs  state.rs
light-client/src/lightclient/: helpers.rs  mod.rs  tests.rs  types.rs
light-client/testdata/: event_verification_data.json  message_verification_historical_roots.json
prover/: .env.template  Cargo.toml  README.md
prover/src/: lib.rs  main.rs  types.rs
prover/src/eth/: consensus.rs  mod.rs  state_prover.rs
prover/src/prover/: consensus.rs  errors.rs  execution.rs  mod.rs  proof_generator.rs  state_prover.rs  test_helpers.rs  types.rs  utils.rs
prover/src/prover/mocks/: mock_consensus_rpc.rs  mock_execution_rpc.rs  mock_state_prover.rs  mod.rs
prover/src/wasm/: mod.rs
relayer/: .env.goerli  .env.mainnet  .env.template  Cargo.toml  README.md  res
relayer/src/: consumer.rs  lib.rs  main.rs  parser.rs  relayer.rs  test.json  types.rs  utils.rs  verifier.rs
relayer/src/consumers/: ethers_consumer.rs  lapin_consumer.rs  mod.rs
relayer/testdata/: contract_call.json  contract_call_with_token.json  operatorship_transferred.json
scripts/: deploy.sh
src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  types.rs  verifier.rs
src/lightclient/: error.rs  helpers.rs  mod.rs  tests.rs  types.rs
testdata/: 767.json  862.json  863.json  864.json  bootstrap.json  input.json  instantiate.json
testdata/verification/: 7061551-7061555.json  7061552-7061553.json
trie-verifier/: Cargo.toml
trie-verifier/src/: helpers.rs  lib.rs  msg.rs  types.rs
trie-verifier/testdata/: receipt_proof.json
types/: Cargo.toml  README.md
types/src/: common.rs  consensus.rs  execution.rs  helpers.rs  lib.rs  lightclient.rs  primitives.rs  proofs.rs  test.json
