[package]
authors = ["Dimitris Lamprinos <pkakelas@gmail.com>"]
edition = "2021"
name = "eth"
version = "0.1.0"

[dependencies]
async-trait = "0.1.74"
ethers = "2.0.11"
eyre = "0.6.8"
futures = "0.3.29"
retri = "0.1.0"
hex = "0.4.3"
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
serde_json = "1.0.105"
ssz-rs = {git = "https://github.com/commonprefix/ssz-rs", branch = "main"}
sync-committee-rs = {package = "sync-committee-primitives", git = "https://github.com/commonprefix/sync-committee-rs", branch = "cp_changes", default-features = false, features = ["serialize"]}
thiserror = {version = "1.0.31"}
reqwest = "0.11.22"
types = {path = "../types", features = ["clone", "debug"]}
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
