[package]
name = "feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
eyre = "0.6.8"
hex = "0.4.3"
reqwest = "0.11.22"
retri = "0.1.0"
serde = "1.0.190"
serde_json = "1.0.108"
thiserror = "1.0.50"
types = { path = "../types" }

# async/futures
async-trait = "0.1.57"
futures = "0.3.23"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }

