[package]
edition = "2021"
name = "feeder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus_types = {path = "../types", package = "types"}
ethers = "2.0.10"
eyre = "0.6.8"
hex = "0.4.3"
reqwest = "0.11.22"
retri = "0.1.0"
serde = "1.0.190"
serde_json = "1.0.108"
ssz-rs = {git = "https://github.com/commonprefix/ssz-rs", branch = "main"}
sync-committee-rs = {package = "sync-committee-primitives", git = "https://github.com/commonprefix/sync-committee-rs", branch = "cp_changes", default-features = false, features = ["serialize"]}
thiserror = "1.0.50"
async-trait = "0.1.74"
cosmos-sdk-proto = {version = "0.20.0", features = ["cosmwasm"]}
cosmrs = "0.15.0"
futures = "0.3.23"
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
tonic = "0.10.2"
cita_trie = "5.0.1"
tree_hash = { git = "https://github.com/synapseweb3/lighthouse", rev = "be911e6" }
hasher = "0.1.4"
