[package]
edition = "2021"
name = "prover"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus_types = {path = "../types", package = "types"}
eth = {path = "../eth", package = "eth"}
ethers = "2.0.10"
eyre = "0.6.8"
hex = "0.4.3"
reqwest = "0.11.22"
retri = "0.1.0"
serde = "1.0.190"
serde_json = "1.0.108"
thiserror = "1.0.50"
async-trait = "0.1.74"
futures = "0.3.23"
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
cita_trie = "5.0.1"
hasher = "0.1.4"
mockall = "0.11.4"
indexmap = "2.1.0"
httptest = "0.15.5"
log = "0.4.20"
