[package]
authors = ["Dimitris Lamprinos <pkakelas@gmail.com>"]
edition = "2021"
name = "relayer"
version = "0.1.0"

[dependencies]
consensus_types = {path = "../types", package = "types"}
eth = {path = "../eth", package = "eth"}
prover = {path = "../prover", package = "prover"}
serde = "1.0.190"
async-trait = "0.1.74"
sync-committee-rs = {package = "sync-committee-primitives", git = "https://github.com/commonprefix/sync-committee-rs", branch = "cp_changes", default-features = false, features = ["serialize"]}
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
dotenv = "0.15.0"
serde_json = "1.0.108"
cosmos-sdk-proto = {version = "0.20.0", features = ["cosmwasm"]}
tonic = "0.10.2"
eyre = "0.6.8"
futures = "0.3.29"
ethers = "2.0.11"
rlimit = "0.10.1"
lapin = "1.0.0"
