[package]
authors = ["Dimitris Lamprinos <pkakelas@gmail.com>"]
edition = "2021"
name = "types"
version = "0.1.0"

[dependencies]
alloy-primitives = "0.4.2"
alloy-rlp = {version = "0.3.3", features = ["derive", "arrayvec"]}
connection-router = {git = "https://github.com/axelarnetwork/axelar-amplifier", features = ["library"]}
eyre = "0.6.8"
hex = "0.4.3"
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
serde_json = "1.0.105"
ssz-rs = {git = "https://github.com/commonprefix/ssz-rs", branch = "main"}
sync-committee-rs = {package = "sync-committee-primitives", git = "https://github.com/commonprefix/sync-committee-rs", branch = "cp_changes", default-features = false, features = ["serialize", "mainnet"]}
