[package]
authors = ["Dimitris Lamprinos <pkakelas@gmail.com>", "Themis Papameletiou <papameletiou.themis@gmail.com>"]
edition = "2021"
name = "types"
version = "0.1.0"

[dependencies]
alloy-primitives = {package = "alloy-primitives", git = "https://github.com/alloy-rs/core ", rev = "862f01e04191ba6146f6d63d66cf2e1035c136df"}
alloy-rlp = {version = "0.3.3", features = ["derive", "arrayvec"]}
axelar-wasm-std = {git = "https://github.com/axelarnetwork/axelar-amplifier", features = ["library"]}
connection-router = {git = "https://github.com/axelarnetwork/axelar-amplifier", features = ["library"]}
eyre = "0.6.8"
hex = "0.4.3"
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
ssz-rs = {git = "https://github.com/commonprefix/ssz-rs", branch = "main"}
sync-committee-rs = {package = "sync-committee-primitives", git = "https://github.com/commonprefix/sync-committee-rs", branch = "superstruct", default-features = false, features = ["serialize", "goerli"]}
cosmwasm-schema = "1.1.3"
