[package]
authors = ["Dimitris Lamprinos <pkakelas@gmail.com>"]
edition = "2021"
name = "light-client"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
alloy-json-abi = {package = "alloy-json-abi", git = "https://github.com/alloy-rs/core ", rev = "862f01e04191ba6146f6d63d66cf2e1035c136df", default-features = false}
alloy-dyn-abi = {package = "alloy-dyn-abi", git = "https://github.com/alloy-rs/core ", rev = "862f01e04191ba6146f6d63d66cf2e1035c136df"}
cita_trie = "5.0.1"
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.1.1"
eyre = "0.6.8"
hasher = "0.1.4"
hex = "0.4.3"
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
milagro_bls = {git = "https://github.com/pkakelas/milagro_bls"}
thiserror = {version = "1.0.31"}
types = {path = "../../types"}

[dev-dependencies]
cw-multi-test = "0.16.2"
serde_json = "1.0.105"
